email validation for registration added

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,64 +1,68 @@
 <!--BEGIN HEADER-->
 <div ng-controller='DashboardCtrl'>
-<div id="header" class="header-scroll" role="banner" style="position:relative">
-    <a id="menu-link" class="head-button-link menu-hide" href="#"><span>Menu</span></a>
-    <a href="#" class="logo"></a>
-    <div class="left">
-        <ul class="topNav tooltip-bottom">
-            <li class="mainLink" id="accountLists">{{routeName}}</li>
-        </ul>
-    </div>
-    <div class="right">
-        <ul class="topNav tooltip-bottom">
-            <li class="mainLink noBrd" id="acctTime">{{ clock | date:'medium'}}</li>
-            <li class="mainLink" id="accountLists">
-                <a href="#" class="accountName" data-toggle="dropdown">
-                    <span class="profile-username ">
+    <div id="header" class="header-scroll" role="banner" style="position:relative">
+        <a id="menu-link" class="head-button-link menu-hide" href="#"><span>Menu</span></a>
+        <a href="#" class="logo"></a>
+        <div class="left">
+            <ul class="topNav tooltip-bottom">
+                <li class="mainLink" id="accountLists">{{routeName}}</li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul class="topNav tooltip-bottom">
+                <li class="mainLink noBrd" id="acctTime">{{ clock | date:'medium'}}</li>
+                <li class="mainLink" id="accountLists">
+                    <a href="#" class="accountName" data-toggle="dropdown">
+                        <span class="profile-username ">
                     <span>Inbox Engine</span>
-                    </span>
-                </a>
-                <div class="dropdown-list">
-                    <div class="ac-head">
-                        My Apps <a href="javaScript:void(0);" class="closePanel">×</a>
+                        </span>
+                    </a>
+                    <div class="dropdown-list">
+                        <div class="ac-head">
+                            My Apps <a href="javaScript:void(0);" class="closePanel">×</a>
+                        </div>
+                        <div class="ft-link">
+                            <p style="height: 10px;">&nbsp;</p>
+                            <a href="#"><i class="icon-off MR10" style="vertical-align: middle;"></i>Logout</a>
+                        </div>
                     </div>
-                    <div class="ft-link">
-                        <p style="height: 10px;">&nbsp;</p>
-                        <a href="#"><i class="icon-off MR10" style="vertical-align: middle;"></i>Logout</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-<!--END HEADER-->
-<!--BEGIN WRAPPER-->
-<div id="wrap">
-    <!--BEGIN SIDEBAR-->
-    <div id="menu" role="navigation">
-        <ul class="main-menu">
-            <li class="submenu">
-                <i class="margin-right-10 fa fa-tachometer"></i><span>Dashboards</span></li>
-            <ul class="submenu-option">
-                <li ng-class="{active : isRouteActive('/viewCampaigns')}"><a href="#/viewCampaigns" class=""><i class="fa fa-paper-plane"></i> View Campaigns</a></li>
-               <!--  <li ng-class="{active : isRouteActive('/sent')}"><a href="#/sent" class=""><i class="fa fa-bell"></i> Sent Notifications</a></li> -->
-             <!--    <li ng-class="{active : isRouteActive('/scheduled')}"><a href="#/scheduled" class=""><i class="fa fa-hourglass-start"></i> Scheduled Notifications</a></li>
+    <!--END HEADER-->
+    <!--BEGIN WRAPPER-->
+    <div id="wrap">
+        <!--BEGIN SIDEBAR-->
+        <div id="menu" role="navigation">
+            <ul class="main-menu">
+                <li class="submenu">
+                    <i class="margin-right-10 fa fa-tachometer"></i><span>Dashboards</span></li>
+                <ul class="submenu-option">
+                    <li ng-class="{active : isRouteActive('/viewCampaigns')}"><a href="#/viewCampaigns" class=""><i class="fa fa-paper-plane"></i> View Campaigns</a></li>
+                    <!--  <li ng-class="{active : isRouteActive('/sent')}"><a href="#/sent" class=""><i class="fa fa-bell"></i> Sent Notifications</a></li> -->
+                    <!--    <li ng-class="{active : isRouteActive('/scheduled')}"><a href="#/scheduled" class=""><i class="fa fa-hourglass-start"></i> Scheduled Notifications</a></li>
                 <li ng-class="{active : isRouteActive('/draft')}"><a href="#/draft" class=""><i class="fa fa-file-text-o"></i> Notifications in draft</a></li> -->
+                </ul>
+                <li class="submenu"><i class="margin-right-10 fa fa-users"></i>Manage Campaigns
+                </li>
+                <ul class="submenu-option tooltip-right">
+                    <!-- <li class=""><a href="javascript:void(0)">Create Campaigns</a></li> -->
+                    <li ng-class="{active : isRouteActive('/createCampaign')}"><a href="#/createCampaign" class=""><i class="fa fa-paper-plane"></i> Create Campaign</a></li>
+                </ul>
+                <li class="submenu"><i class="margin-right-10 fa fa-users"></i>User Management
+                </li>
+                <ul class="submenu-option tooltip-right">
+                    <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
+                </ul>
             </ul>
-            <li class="submenu"><i class="margin-right-10 fa fa-users"></i>Manage Campaigns
-            </li>
-            <ul class="submenu-option tooltip-right">
-                <!-- <li class=""><a href="javascript:void(0)">Create Campaigns</a></li> -->
-                <li ng-class="{active : isRouteActive('/createCampaign')}"><a href="#/createCampaign" class=""><i class="fa fa-paper-plane"></i> Create Campaign</a></li>
-                <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
-            </ul>
-        </ul>
-        <div class="clearfix"></div>
-    </div>
-    <!--SIDEBAR END -->
-    <!--BEGIN MAIN CONTENT-->
-    <!--      <div id="main" role="main">
+            <div class="clearfix"></div>
+        </div>
+        <!--SIDEBAR END -->
+        <!--BEGIN MAIN CONTENT-->
+        <!--      <div id="main" role="main">
         </div> -->
-    <!--END MAIN CONTENT-->
-    <!--END WRAPPER-->
-</div>
+        <!--END MAIN CONTENT-->
+        <!--END WRAPPER-->
+    </div>
 </div>
