reset password form and controller added

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -54,6 +54,7 @@
                 </li>
                 <ul class="submenu-option tooltip-right">
                     <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
+                    <li  ng-show= isLoggedIn ng-class="{active : isRouteActive('/resetPassword')}"><a href="#/resetPassword" class=""><i class="fa fa-paper-plane"></i> Reset Password</a></li>
                 </ul>
             </ul>
             <div class="clearfix"></div>
