reset password functionality added

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -31,7 +31,7 @@
                 </li>
                 <ul class="submenu-option tooltip-right">
                     <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
-                    <li  ng-show= isLoggedIn ng-class="{active : isRouteActive('/resetPassword')}"><a href="#/resetPassword" class=""><i class="fa fa-paper-plane"></i> Reset Password</a></li>
+                    <li  ng-class="{active : isRouteActive('/resetPassword')}"><a href="#/resetPassword" class=""><i class="fa fa-paper-plane"></i> Reset Password</a></li>
                 </ul>
                 <li class="submenu"><i class="margin-right-10 fa fa-users"></i>Manage Campaigns
                 </li>
