--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -9,7 +9,7 @@
                         <label for="oldPassword">Old Password<span id="red"> *</span>:</label>
                     </th>
                     <td>
-                        <input type="text" ng-model="user.oldPassword" class="form-control" />
+                        <input type="password" ng-model="user.oldPassword" class="form-control" />
                     </td>
                 </tr>
                 <tr>
@@ -17,7 +17,7 @@
                         <label for="newPassword">New Password<span id="red"> *</span>:</label>
                     </th>
                     <td>
-                        <input type="text" ng-model="user.newPassword" class="form-control" />
+                        <input type="password" ng-model="user.newPassword" class="form-control" />
                     </td>
                 </tr>
                 <tr>
@@ -25,7 +25,7 @@
                         <label for="confirmPassword">Confirm Password<span id="red"> *</span>:</label>
                     </th>
                     <td>
-                        <input type="text" ng-model="user.confirmPassword" class="form-control" ng-blur="validatePassword(user)" />
+                        <input type="password" ng-model="user.confirmPassword" class="form-control" ng-blur="validatePassword(user)" />
                     </td>
                 </tr>
             </thead>
