restrciting ccteam and members from creating user

--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/dashboard.html'"></div>
-<div class="container announcement-container" ng-controller="ResetPassowrdCtrl">
+<div class="container announcement-container" ng-controller="ResetPasswordCtrl">
     <div class="form-container">
         <div class="alert alert-danger" ng-show="alertFlag">{{alertMsg}}</div>
         <table class="table MT15">
