--- a/views/userLogin.html
+++ b/views/userLogin.html
@@ -6,12 +6,12 @@
     <div class="container login-container">
         <div class="form-group">
             <label for="username">Email</label>
-            <input type="email" ng-model="user.email" ng-blur="validateEmail(user.email)" class="form-control" />
+            <input type="email" ng-model="user.email" class="form-control" />
         </div>
         <div class="form-group">
             <label for="password">Password</label>
             <input type="password" ng-model="user.password" class="form-control" />
         </div>
-        <button data-style="expand-right" type="button" ng-click="authUser(user)" ng-disabled="!user.email || !user.password" class="btn btn-lg btn-primary btn-block"><span class="ladda-label">Sign In</span></button>
+        <button data-style="expand-right" type="button" ng-click="authUser(user)" class="btn btn-lg btn-primary btn-block"><span class="ladda-label">Sign In</span></button>
     </div>
 </div>
