checking Userrole and hiding/showing create user

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -30,7 +30,7 @@
                 <li class="submenu"><i class="margin-right-10 fa fa-users"></i>User Management
                 </li>
                 <ul class="submenu-option tooltip-right">
-                    <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
+                    <li ng-show="userRole=='Admin'" ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
                     <li  ng-class="{active : isRouteActive('/resetPassword')}"><a href="#/resetPassword" class=""><i class="fa fa-paper-plane"></i> Change Password</a></li>
                 </ul>
                 <li class="submenu"><i class="margin-right-10 fa fa-users"></i>Manage Campaigns
