--- a/css/style.css
+++ b/css/style.css
@@ -3290,3 +3290,11 @@ input[type="radio"] + label span {
 .profile-p{
     margin: 13px 0 10px;
 }
+
+.margin-bottom-sm {
+    margin-bottom: 5px !important;
+}
+
+.login-button {
+    margin-left: 208px;
+}
