--- a/views/userLogin.html
+++ b/views/userLogin.html
@@ -5,12 +5,12 @@
     <div class="alert alert-danger login-container-msgbox" ng-show="alertFlag">{{alertMsg}}</div>
     <div class="container login-container">
         <div class="form-group">
-            <label for="username">Email</label>
-            <input type="email" ng-model="user.email" class="form-control" />
+            <i class="fa fa-envelope-o fa-fw"></i><label for="username">Email</label>
+            <input type="email" ng-model="user.email" class="form-control" placeholder="Email address"/>
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" ng-model="user.password" class="form-control" />
+            <i class="fa fa-key fa-fw"></i><label for="password">Password</label>
+            <input type="password" ng-model="user.password" class="form-control" placeholder="Password"/>
         </div>
         <button data-style="expand-right" type="button" ng-click="authUser(user)" class="btn btn-lg btn-primary btn-block"><span class="ladda-label">Sign In</span></button>
     </div>
