--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -147,7 +147,7 @@
                 </tr>
                 <tr>
                     <th>
-                        <label for="appCode">Appcode:</label>
+                        <label for="appCode" style="margin-bottom: 46%;">Appcode<span id="red">*</span>:</label>
                     </th>
                     <td>
                         <div class="md-padding demo checkboxdemoSelectAll">
@@ -168,7 +168,7 @@
                 </tr>
                 <tr ng-show="selectType.messageCardTypeValue == 'PlainText with CTA'">
                     <th>
-                        <label for="text">Primary CTA text:</label>
+                        <label for="text">Primary CTA text<span id="red">*</span>:</label>
                     </th>
                     <td>
                         <input type="text" Maxlength="10" class="form-control" ng-model='appCodefield.text' placeholder="Text" />
@@ -176,7 +176,7 @@
                 </tr>
                 <tr ng-show="selectType.messageCardTypeValue == 'PlainText with CTA'">
                     <th>
-                        <label for="link">Primary CTA Link:</label>
+                        <label for="link">Primary CTA Link<span id="red">*</span>:</label>
                     </th>
                     <td>
                         <input type="url" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
@@ -192,7 +192,7 @@
                 </tr>
                 <tr ng-show="showDiv">
                     <th>
-                        <label for="showKeyValue">Custom key-value pairs</label>
+                        <label for="showKeyValue">Custom key-value pairs:</label>
                     </th>
                     <td>
                         <div class="grid push-form">
