--- a/views/editAnnouncement.html
+++ b/views/editAnnouncement.html
@@ -145,33 +145,43 @@
                 </tr>
                 <tr>
                     <th>
-                        <label for="appCode">Appcode:</label>
+                        <label for="appCode" style="margin-bottom: 46%;">Appcode<span id="red">*</span>:</label>
                     </th>
                     <td>
-                         <!-- <select class="btn btn-default" ng-model="announcement.appCodes[0].appCode" ng-options="v for v in selectType.appCodeTypeValues"></select>{{announcement.appCodes[0].appCode}} -->
-                         <select class="btn btn-default" ng-model="announcement.appCodes[0].appCode">
-                            <option ng-selected="announcement.appCodes[0].appCode">{{announcement.appCodes[0].appCode}}</option>
-                        </select>
-                        <!-- <div class="md-padding demo checkboxdemoSelectAll">
+                        <div class="md-padding demo checkboxdemoSelectAll">
                             <md-checkbox aria-label="Select All" ng-checked="isChecked()" md-indeterminate="isIndeterminate()" ng-click="toggleAll()">
                                 <span ng-if="isChecked()">Un-</span>Select All Appcodes
                             </md-checkbox>
-                            <div class="demo-select-all-checkboxes" flex="100" ng-repeat="item in items">
-                                <md-checkbox ng-checked="exists(item, selected);" ng-click="toggle(item, selected)">
-                                    {{ item }}
-                                </md-checkbox>
+                            <div class="row">
+                                <div class="demo-select-all-checkboxes" flex="100" ng-repeat="item in items">
+                                    <div class="col-md-3">
+                                        <md-checkbox ng-checked="exists(item, selected);" ng-click="toggle(item, selected)">
+                                            {{ item }}
+                                        </md-checkbox>
+                                    </div>
+                                </div>
                             </div>
-                        </div> -->
+                        </div>
                     </td>
                 </tr>
-                <!-- <tr ng-show='showDiv'>
+                <tr ng-show='showDiv'>
                     <th>
-                        tEST
+                        <label for="showKeyValue">Custom key-value pairs:</label>
                     </th>
                     <td>
-                        dEMO
+                        <div class="grid push-form">
+                            <div ng-model="showKeyValue" ng-show="showKeyValue">
+                                <div data-ng-repeat="keyValuePair in keyValuePairs" style="padding-bottom: 5px;">
+                                    <input type="text" ng-model="keyValuePair.name" placeholder="Key">
+                                    <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
+                                    <!-- <button ng-click="pushToParseKeyValuePair()">Save</button> -->
+                                    <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index,keyValuePair.name)">X</button>
+                                </div>
+                            </div>
+                            <a href data-ng-click="addNewKeyValuePair()">+ Add New Pair</a>
+                        </div>
                     </td>
-                </tr> -->
+                </tr>
             </thead>
         </table>
         <button type="button" class="btn btn-success" ng-click="update(announcement)">Update</button>
