common route updated

--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/dashboard.html'"></div>
-<div class='container announcement-container' ng-controller="NewCtrl">
+<div class='container announcement-container' ng-controller="CreateCampaignCtrl">
     <div ng-show="!selectOptions">
         <img src="images/gears-anime.gif">
     </div>
