--- a/views/editAnnouncement.html
+++ b/views/editAnnouncement.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/dashboard.html'"></div>
-<div class='container announcement-container' ng-controller='AnnouncementCtrl'>
+<div class='container announcement-container' ng-controller='EditAnnouncementCtrl'>
     <div ng-show="!selectedIds">
         <img src="images/gears-anime.gif">
     </div>
