--- a/views/editNotification.html
+++ b/views/editNotification.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/dashboard.html'"></div>
-<div class='container announcement-container' ng-controller='NotificationCtrl'>
+<div class='container announcement-container' ng-controller='EditNotificationCtrl'>
     <div ng-show="!notification">
         <img src="images/gears-anime.gif">
     </div>
