--- a/views/userProfile.html
+++ b/views/userProfile.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/dashboard.html'"></div>
-<div ng-controller="ProfileCtrl">
+<div ng-controller="UserProfileCtrl">
     <div class="container  announcement-container">
         <form class="form-horizontal">
             <legend >Profile details</legend>
