--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -32,6 +32,7 @@
                 </li>
                 <ul ng-show="userRole=='Admin'" class="submenu-option tooltip-right">
                     <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-user-plus" aria-hidden="true"></i> Create User</a></li>
+                    <li ng-class="{active : isRouteActive('/listUsers')}"><a href="#/listUsers" class=""><i class="fa fa-users" aria-hidden="true"></i> List Users</a></li>
                 </ul>
                 <li class="submenu"><i class="fa fa-wrench" aria-hidden="true"></i> Manage Campaigns
                 </li>
