--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -192,7 +192,7 @@
                 </tr>
                 <tr ng-show="showDiv">
                     <th>
-                        <label for="showKeyValue">Custom key-value pairs:</label>
+                        <label for="showKeyValue" style="margin-bottom: 50%;">Custom key-value pairs:</label>
                     </th>
                     <td>
                         <div class="grid push-form">
@@ -209,6 +209,6 @@
                 </tr>
             </thead>
         </table>
-        <button type="submit" class="btn btn-primary" ng-click="create(message)">Create</button>
+        <button type="submit" class="btn btn-primary" ng-click="create(message)" style="margin-left: 50%;">Create</button>
     </div>
 </div>
