--- a/views/editNotification.html
+++ b/views/editNotification.html
@@ -123,7 +123,7 @@
                 </tr>
                 <tr>
                     <th>
-                        <label for="appCode">Appcode:</label>
+                        <label for="appCode" style="margin-bottom: 46%;">Appcode<span id="red">*</span>:</label>
                     </th>
                     <td>
                         <div class="md-padding demo checkboxdemoSelectAll">
@@ -171,7 +171,7 @@
                 </tr>
                 <tr ng-show="showDiv">
                     <th>
-                        <label for="showKeyValue">Custom key-value pairs</label>
+                        <label for="showKeyValue" style="margin-bottom: 50%;">Custom key-value pairs:</label>
                     </th>
                     <td>
                         <div class="grid push-form">
@@ -186,6 +186,6 @@
                 </tr>
             </thead>
         </table>
-        <button type="button" class="btn btn-success" ng-click="update(notification)">Update</button>
+        <button type="button" class="btn btn-success" ng-click="update(notification)" style="margin-left: 50%;">Update</button>
     </div>
 </div>
