button style changed

--- a/views/listUsers.html
+++ b/views/listUsers.html
@@ -33,7 +33,7 @@
                        </div>
                     </td>
                     <td class="announcement">
-                        <button  class="btn btn-info"  ng-click="activeDeactiveUser(users)">{{users.isActive?'Deactivate':'Activate'}}</button>
+                        <button  class="btn btn-info btnwidth"  ng-click="activeDeactiveUser(users)">{{users.isActive?'Deactivate':'Activate'}}</button>
                                 
                     </td>
                 </tr>
